Fix docs navigation not wrapping

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,6 +61,7 @@ h1 {
 
 nav {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 1rem;
 }
